--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -11,7 +11,7 @@
 %table#movies
   %thead
     %tr
-      %th= sort_link "Title"
+      %th= sort_link "title", "Title"
       %th Rating
       %th= sort_link "release_date", "Release Date"
       %th More Info
