--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -2,10 +2,10 @@
 %h1 All Movies
 
 = form_tag movies_path, :method => :get do
-  Include:
+  Include these ratings:
   - @movies.all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]"
+    = check_box_tag "ratings[#{rating}]", rating, @filter.include?(rating)
   = submit_tag 'Refresh'
 
 %table#movies
